# distillery

./: README.md
backend/: requirements.txt  setup.cfg
backend/src/: dummy_response.txt  main.py  test.json
frontend/: .env  .eslintrc.json  .prettierrc  package-lock.json  package.json  tailwind.config.js
frontend/public/: dummy_response.json  index.html  tiff-worker.js
frontend/src/: App.js  config.json  index.css
frontend/src/components/: Distillery.js  DocumentList.js  FeedbackMenu.js  FhirClientProvider.js  NavigationHeader.js  PDfViewer.js  Patient.js  PatientHeader.js  Settings.js  SettingsUtils.js  SourceSection.js  Summary.css  Summary.js  SummarySection.js  WebSocket.js
frontend/src/helpers/: renderFact.js
frontend_next/: .env  config.json  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend_next/components/: DocumentList.tsx  ErrorPopup.tsx  NavigationHeader.tsx  Patient.tsx  ReportsFilter.tsx  SummarySectionsFilter.tsx  WebSocket.tsx
frontend_next/components/__tests__/: DocumentList.test.tsx  Patient.test.tsx  (+10 more)
frontend_next/context/: FhirClientContext.ts  FhirClientProvider.tsx  ThemeContext.tsx  WebSocketContext.ts  WebSocketProvider.tsx
frontend_next/pages/: _app.tsx  distillery.tsx  documents.tsx
frontend_next/public/: dummy_response.json  tiff-worker.js
frontend_next/styles/: global.css
frontend_next/types/: Client.types.ts  Document.types.ts  Message.types.ts  WebSocketComponent.types.ts  common.types.ts
frontend_next/utils/: fetchReports.ts  handleFactRender.js  index.ts  localStorage.ts
(+20 files in other folders)
