[metadata]
name = smart_llm_tools
version = 1.0.0
author = Pentavere Research Group Inc.
author_email = saviv@pentavere.com
description = SMART on FHIR LLM tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pentavere/heart_failure_pipeline
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
python_requires = >=3.10
install_requires =
    fastapi
    pydantic_settings
    PyJWT
    itsdangerous
    uvicorn[standard]